--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,23 +5,33 @@ on: push
 jobs:
   automated-api-tests:
     runs-on: ubuntu-latest
-    services:
-      docker:
-        image: your-docker-image:latest
-        options: --privileged  # If needed
-        ports:
-          - 8080:8080  # Adjust as necessary
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Docker Compose
-        run: sudo apt-get install docker-compose
-      - name: Start Docker Compose
-        run: docker-compose up -d
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+      
+      - name: Build and start services
+        run: |
+          docker-compose build
+          docker-compose up -d
+          # Wait for services to be healthy
+          sleep 30
+
+      - name: Check running containers
+        run: docker-compose ps
+
       - name: Install Postman CLI
         run: |
           curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+
       - name: Login to Postman CLI
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+
       - name: Run API tests
         run: |
           postman collection run "30494225-2fb384d3-ce23-4bb3-b0fe-ccf54754f7b7" -e "39565350-d9ba31e3-b8d5-401b-9b9e-f414512936df" --integration-id "171302-${{ github.run_id }}"
+
+      - name: Clean up
+        if: always()
+        run: docker-compose down
