chores: removed old configs

--- a/api_gateway/api_gateway.conf
+++ b/api_gateway/api_gateway.conf
@@ -4,48 +4,39 @@ events {}
 
 http {
     upstream service_profile {
-        least_conn;  # Usa la strategia "least_conn" per inviare richieste alla replica con meno connessioni attive
-        server service_profile:8080 max_fails=3 fail_timeout=10s;  # Docker Compose gestisce tutte le repliche con lo stesso nome
+        server service_profile:8080
     }
 
     upstream service_admin {
-        least_conn;
-        server service_admin:8080 max_fails=3 fail_timeout=10s;
+        server service_admin:8080
     }
 
     upstream service_auth {
-        least_conn;
-        server service_auth:8080 max_fails=3 fail_timeout=10s;
+        server service_auth:8080
     }
 
     upstream service_auctions {
-        least_conn;
-        server service_auctions:8080 max_fails=3 fail_timeout=10s;
+        server service_auctions:8080
     }
 
     upstream service_currency {
-        least_conn;
-        server service_currency:8080 max_fails=3 fail_timeout=10s;
+        server service_currency:8080
     }
 
     upstream service_feedback {
-        least_conn;
-        server service_feedback:8080 max_fails=3 fail_timeout=10s;
+        server service_feedback:8080
     }
 
     upstream service_gacha {
-        least_conn;
-        server service_gacha:8080 max_fails=3 fail_timeout=10s;
+        server service_gacha:8080
     }
 
     upstream service_inventory {
-        least_conn;
-        server service_inventory:8080 max_fails=3 fail_timeout=10s;
+        server service_inventory:8080
     }
 
     upstream service_pvp {
-        least_conn;
-        server service_pvp:8080 max_fails=3 fail_timeout=10s;
+        server service_pvp:8080
     }
 
     server {
