notworking: added admin code dbmanager. Need to address error mysql integrity regarding auctions table

--- a/api_gateway/api_gateway.conf
+++ b/api_gateway/api_gateway.conf
@@ -4,39 +4,39 @@ events {}
 
 http {
     upstream service_profile {
-        server service_profile:8080
+        server service_profile:8080;
     }
 
     upstream service_admin {
-        server service_admin:8080
+        server service_admin:8080;
     }
 
     upstream service_auth {
-        server service_auth:8080
+        server service_auth:8080;
     }
 
     upstream service_auctions {
-        server service_auctions:8080
+        server service_auctions:8080;
     }
 
     upstream service_currency {
-        server service_currency:8080
+        server service_currency:8080;
     }
 
     upstream service_feedback {
-        server service_feedback:8080
+        server service_feedback:8080;
     }
 
     upstream service_gacha {
-        server service_gacha:8080
+        server service_gacha:8080;
     }
 
     upstream service_inventory {
-        server service_inventory:8080
+        server service_inventory:8080;
     }
 
     upstream service_pvp {
-        server service_pvp:8080
+        server service_pvp:8080;
     }
 
     server {
