feat(admin): updated admin model, fix for feedback id being a float, added a few functions to dbmngr of admin

--- a/gachaandgames_complete.yaml
+++ b/gachaandgames_complete.yaml
@@ -1415,9 +1415,8 @@ components:
   schemas:
     FeedbackId:
       description: Id of feedback.
-      format: integer
       title: id
-      type: number
+      type: integer
     Feedback:
       properties:
         id:
