feat(pvp): suspended pvp feat(apigw): now apigateways send both an extra cookie to auth so that auth can discriminate from which requests arrive; if request arrive from port 8081 the user is registered as admin feat(admin): fixes of bugsf

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -31,9 +31,9 @@ http {
         server service_inventory:8080;
     }
 
-    upstream service_pvp {
-        server service_pvp:8080;
-    }
+    # upstream service_pvp {
+    #     server service_pvp:8080;
+    # }
 
     server {
         listen 8080;
@@ -54,6 +54,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Source-Gateway Gateway-Public;
         }
 
         location ^~ /auctions/ {
@@ -102,14 +103,14 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
 
-        location ^~ /pvp/ {
-            proxy_pass http://service_pvp/pvp/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-        }
+        # location ^~ /pvp/ {
+        #     proxy_pass http://service_pvp/pvp/;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        #     proxy_set_header X-Forwarded-Host $host;
+        # }
 
         location ^~ /favicon.ico {
             root /usr/share/nginx/html;
