--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -7,6 +7,10 @@ http {
         server service_admin:8080;
     }
 
+    upstream service_auth {
+        server service_auth:8080;
+    }
+
     server {
         listen 8081;
 
@@ -17,6 +21,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+    
+        location ^~ /auth/ {
+            proxy_pass http://service_auth/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Source-Gateway Gateway-Private;
+        }
+
+        
 
         location ^~ /favicon.ico {
             root /usr/share/nginx/html;
