major change: changed mysql library, removed old code and certificates with database and dbmanager

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -3,6 +3,9 @@
 events {}
 
 http {
+    proxy_headers_hash_max_size 1024;
+    proxy_headers_hash_bucket_size 128;
+
     upstream service_profile {
         server service_profile:8080;
     }
