added certificates for api_gateway, dbmanager and database

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -39,7 +39,13 @@ http {
     # }
 
     server {
-        listen 8080;
+        listen 443 ssl;
+        server_name localhost;
+        
+        ssl_certificate         /etc/nginx/ssl/api-gateway-cert.pem;
+        ssl_certificate_key     /etc/nginx/ssl/api-gateway-key.pem;
+        ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+        ssl_verify_client off;
 
         location ^~ /profile/ {
             proxy_pass http://service_profile/profile/;
