--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -15,7 +15,13 @@ http {
     }
 
     server {
-        listen 8081;
+        listen 444 ssl;
+        server_name localhost;
+        
+        ssl_certificate         /etc/nginx/ssl/api-gateway-cert.pem;
+        ssl_certificate_key     /etc/nginx/ssl/api-gateway-key.pem;
+        ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+        ssl_verify_client off;
 
         location ^~ /admin/ {
             proxy_pass http://service_admin/admin/;
