--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -3,8 +3,17 @@
 events {}
 
 http {
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     proxy_headers_hash_max_size 1024;
     proxy_headers_hash_bucket_size 128;
+
+    upstream logging_grafana {
+        server logging_grafana:3000;
+    }
     
     upstream service_admin {
         server service_admin:8080;
@@ -39,6 +48,19 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Source-Gateway Gateway-Private;
+        }
+
+        location /logs/ {
+            proxy_set_header Host $host;
+            proxy_pass http://logging_grafana/;
+        }
+
+        location /logs/api/live/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_pass http://logging_grafana/;
         }
 
         location ^~ /favicon.ico {
