--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,19 @@ services:
     deploy:
       replicas: 1
 
+  redis:
+    image: redis:latest
+    container_name: unipi-gatchaandgames-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
+    networks:
+      - private_gachaandgames_network
+      - public_gachaandgames_network
+
+
   service_admin:
     image: service_admin
     build: ./services/admin/
@@ -357,3 +370,4 @@ volumes:
   mysql_gatchaandgames_db:
   grafana_data:
   loki_data:
+  redis_data:
