--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -14,8 +14,8 @@ http {
         server service_auth:8080;
     }
 
-    upstream service_auctions {
-        server service_auctions:8080;
+    upstream service_auction {
+        server service_auction:8080;
     }
 
     upstream service_currency {
@@ -34,9 +34,9 @@ http {
         server service_inventory:8080;
     }
 
-    # upstream service_pvp {
-    #     server service_pvp:8080;
-    # }
+    upstream service_pvp {
+        server service_pvp:8080;
+    }
 
     server {
         listen 443 ssl;
@@ -66,8 +66,8 @@ http {
             proxy_set_header X-Source-Gateway Gateway-Public;
         }
 
-        location ^~ /auctions/ {
-            proxy_pass http://service_auctions/auctions/;
+        location ^~ /auction/ {
+            proxy_pass http://service_auction/auction/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -112,14 +112,14 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
 
-        # location ^~ /pvp/ {
-        #     proxy_pass http://service_pvp/pvp/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        #     proxy_set_header X-Forwarded-Host $host;
-        # }
+        location ^~ /pvp/ {
+            proxy_pass http://service_pvp/pvp/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+        }
 
         location ^~ /favicon.ico {
             root /usr/share/nginx/html;
